<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="rate_dialog_title">Califícanos :D</string>
    <string name="rate_dialog_message">Si te gusta nuestra app nos sentiríamos muy encantados que nos dieras tu opinión. ¡Gracias!</string>
    <string name="rate_dialog_ok">CALIFICAR</string>
    <string name="rate_dialog_cancel">RECORDARME MÁS TARDE</string>
    <string name="rate_dialog_no">NO, GRACIAS</string>
    <string name="FROM">Por</string>
    <string name="app_name">Lectura Liberal</string>
    <string name="txt_frase_splashscreen">LECTURA LIBERAL</string>
    <string name="txt_imagedescription">Logo App</string>
    <string name="txt_creador">ElCapitalChile</string>
    <string name="txt_nombre_johnlacke">John Lacke</string>
    <string name="txt_descripcion_johnlocke">John Locke fue un filósofo y médico inglés, considerado como uno de los más influyentes pensadores del empirismo inglés y conocido como el Padre del Liberalismo Clásico. Su trabajo afectó en gran medida el desarrollo de la epistemología y la filosofía política. Sus escritos influyeron en Voltaire y Rousseau, pensadores de la Ilustración francesa.</string>
    <string name="txt_descripcion_adamsmith">Adam Smith fue un economista y filósofo escocés, considerado uno de los mayores exponentes de la economía clásica y de la filosofía de la economía. Gracias a su obra La Riqueza de las Naciones se le conoce como el Padre de la Economía Moderna dado que fue el primer estudio completo y sistemático acerca de la creación y acumulación de la riqueza. </string>
    <string name="txt_descripcion_thomaspaine">Thomas Paine fue un filósofo y escritor político nacido en Inglaterra que apoyó las causas revolucionarias en América y Europa. Publicado en 1776 con reconocimiento internacional, Sentido Común fue el primer folleto que abogó por la independencia estadounidense. Fue promotor del liberalismo,la democracia y considerado un Padre fundador.</string>
    <string name="txt_descripcion_nicolasdecondorcet">Marie-Jean-Antoine Nicolas de Caritat, marqués de Condorcet, fue un filósofo, científico, matemático, político y politólogo francés. En 1785, Condorcet publicó uno de sus principales trabajos: "Ensayo sobre la aplicación del análisis a la probabilidad de las decisiones sometidas a la pluralidad de voces" , la cual explica una paradoja.</string>
    <string name="txt_descripcion_benjaminconstant">Henri Benjamin Constant de Rebecque fue escritor y político francés. Procedente de una desarraigada familia de protestantes franceses emigrados a Suiza, recibió una educación cosmopolita pasando por las universidades de Oxford, Erlangen y Edimburgo. Su afición política inicio en el periodo de la Revolución francesa y defendió el liberalismo.</string>
    <string name="txt_descripcion_wilhelmvonhumboldt">Friedrich Wilhelm Christian Carl Ferdinand, barón de Humboldty, en español, Guillermo de Humboldt, fue un erudito y hombre de estado prusiano, uno de los fundadores de la Universidad de Berlín. Luego de dejar su cargo como Ministro de Estado , debido a su insatisfacción, se dedicó arduamente al estudio de la lingüística toda su vida</string>
    <string name="txt_descripcion_davidricardo"> David Ricardo fue un economista inglés de origen judío sefardí-portugués, miembro de la corriente de pensamiento clásico económico y uno de los más influyentes junto a Adam Smith y Thomas Malthus. Es considerado uno de los pioneros de la macroeconomía moderna por su análisis de la relación entre beneficios y salarios.También fue un exitoso empresario.</string>
    <string name="txt_descripcion_leonardsionde">Jean-Charles-Leonard Simonde de Sismondi fue historiador y economista suizo. Inicialmente es un divulgador del pensamiento de Adam Smith pero, tras observar en varios viajes las duras condiciones de trabajo de la clase obrera, se convierte en  un crítico de la doctrina económica liberal ortodoxa, elaborando unas tesis económicas propias.</string>
    <string name="txt_descripcion_fredericbastiat">Frédéric Bastiat fue un economista, político, magistrado y pensador liberal francés de la primera mitad del siglo XIX. Desarrolló un pensamiento liberal, caracterizado por la defensa del libre comercio y la oposición al socialismo y al colonialismo. Fue parte de la Escuela liberal francesa. Conocido también como  \n El Cobden francés.</string>
    <string name="txt_descripcion_alexisdetocqueville">Charles-Alexis Clérel de Tocqueville fue pensador y político liberal francés. Procedente de una familia noble, Tocqueville fue uno de los observadores más lúcidos del cambio producido en su época por la revolución liberal. Estudió derecho y obtuvo una plaza de magistrado en Versalles en 1827. Su obra magna fue "La Democracia en América".</string>
    <string name="txt_descripcion_johnstuartmill">John Stuart Mill fue un economista, filósofo y político nacido en Londres que defendió el Utilitarismo. Miembro del Partido Liberal, Mill fue un defensor de la libertad individual en oposición al control estatal y social ilimitado, como también defendió la investigación de la metodología científica, \n y el sufragio femenino.</string>
    <string name="txt_descripcion_herbertspence">Herbert Spencer vivió en el siglo XIX. Aunque de formación técnica, trabajó todo tipo de disciplinas, tanto en las ciencias naturales como en las sociales. Partidario del Darwinismo Social y firme defensor del individuo y del liberalismo más radical.  Durante su vida alcanzó una tremenda autoridad, sobre todo en el ámbito académico de habla inglesa.</string>
    <string name="txt_descripcion_carlmenger">Carl Menger fue un economista austríaco, considerado junto a W. S. Jevons y Léon Walras como uno de los fundadores del marginalismo y de la teoría de la utilidad. También fue fundador de la Escuela Austríaca, donde sus principales seguidores \n Wieser y Böhm -Bawerk fueron sus discípulos. \n Su obra más notable es <i>Principios de Economía</i>.</string>
    <string name="txt_descripcion_johndewy">John Dewey fue el filósofo estadounidense más importante de la primera mitad del siglo XX y, junto con Charles Sanders Peirce y William James, uno de los fundadores de la filosofía del pragmatismo.\n Durante la primera mitad del siglo XX fue \n la figura más representativa de la pedagogía \n progresista en Estados Unidos.</string>
    <string name="txt_descripcion_johndewy2">John Dewey fue el filósofo estadounidense más importante de la primera mitad del siglo XX y, junto con Charles Sanders Peirce y William James, uno de los fundadores de la filosofía del pragmatismo. Durante la primera mitad del siglo XX fue \n la figura más representativa de la pedagogía \n progresista en Estados Unidos.</string>
    <string name="txt_descripcion_leonardtrelawny2">Leonard Trelawny Hobhouse sociólogo y filósofo inglés que intentó reconciliar el liberalismo con el colectivismo en aras del progreso social. Al elaborar su concepción de la sociología , se basó en su conocimiento de varios otros campos: filosofía, psicología, biología, antropología e historia de la religión, \n la ética y el derecho.</string>
    <string name="txt_descripcion_leonardtrelawny">Leonard Trelawny Hobhouse sociólogo y filósofo inglés que intentó reconciliar el liberalismo con el colectivismo en aras del progreso social. Al elaborar su concepción de la sociología , se basó en su conocimiento de varios otros campos: filosofía, psicología, biología, antropología e historia de la religión, la ética y el derecho.</string>
    <string name="txt_descripcion_benedettocroce">Benedetto Croce fue un escritor, filósofo, historiador y político italiano. Figura destacada del liberalismo. Fue miembro del senado italiano desde 1910, Ministro de Educación desde 1920 a 1921, y otra vez después de la II Guerra Mundial. Oponente al fascismo, se pronunció en contra del Gobierno de Benito Mussolini. </string>
    <string name="txt_descripcion_benedettocroce2">Benedetto Croce fue un escritor, filósofo, historiador y político italiano. Figura destacada del liberalismo. Fue miembro del senado italiano desde 1910, Ministro de Educación desde 1920 a 1921, y otra vez después de la II Guerra Mundial. Oponente al fascismo, se pronunció  en contra del \n Gobierno de Benito Mussolini. </string>
    <string name="txt_descripcion_juanbautistaalberdi">Juan Bautista Alberdi, el inspirador de la Constitución Nacional Argentina y del período más próspero de la economía Argentina, fue uno de los más grandes pensadores argentinos, nació en Tucumán el 29 de agosto de 1810. Su principal obra fue Bases y Puntos de Partida para la Organización Política de la \n República Argentina. </string>
    <string name="txt_descripcion_ludwigvonmises">Ludwig Heinrich Edler von Mises fue un economista austríaco. Mises ha contribuido en gran medida a la economía neoclásica y fue uno de los líderes de la Escuela Austríaca.Fue un firme defensor del liberalismo económico, basado en la idea de que la teoría de la oferta y la demanda dará lugar a la asignación más eficiente de los recursos.</string>
    <string name="txt_descripcion_salvadordemadariaga">Salvador de Madariaga fue esscritor español. Su ideología liberal se manifestó en una prolífica obra que abarca tanto el ensayo como la novela, la poesía y el teatro. A pesar de su temprana vocación literaria, Salvador de Madariaga estudió ingeniería en París para cumplir la voluntad de su padre, militante de ideas liberales.</string>
    <string name="txt_descripcion_friedrichhayek">Friedrich August von Hayek fue un economista, jurista y filósofo vienés de la Escuela Austríaca. Especialmente conocido por recibir el Premio Nobel en 1974, Hayek fue un firme defensor del liberalismo y crítico de la economía planificada y el socialismo. \n La principal aportación de von Hayek \n fue su teoría del ciclo económico.</string>
    <string name="txt_descripcion_karlpopper">Karl Popper es considerado como uno de los filósofos de la ciencia más importantes del siglo XX y sentó una de las bases del método cientifico, el falsasionismo. En el discurso político, es conocido por su vigorosa defensa de la democracia liberal y los principios de crítica social que creía que hacían posible una floreciente sociedad abierta.</string>
    <string name="txt_descripcion_raymondaron">Raymon Aron sociólogo francés. Fue uno de los primeros en proponer una teoría de la sociedad industrial como vía para comprender los problemas fundamentales de la civilización occidental del siglo XX. Aron, afín al liberalismo tradicional, fustigó las ideologías de derechas e izquierdas y fue un lúcido analista de la realidad social y política de su tiempo.</string>
    <string name="txt_terminos_condiciones"><u>Términos &amp; Condiciones</u></string>
    <string name="txt_politicas_privacidad"><u>Políticas de Privacidad</u></string>
    <string name="subtitulo">Lectura Liberal</string>
    <string name="contactanos">Puedes contactarnos: </string>
    <string name="Insta">Instagram:</string>
    <string name="InstaReal">\@elcapitalchile</string>
    <string name="mail">E-Mail:</string>
    <string name="Realmail">elcapitalchile@gmail.com</string>
    <string name="sugerencia">Para cualquier consulta o sugerencia con respecto a la app.</string>
    <string name="LiberalismoDefi">Liberalismo</string>
    <string name="definicionLiberalismo">El Liberalismo es una doctrina política, económica y social que defiende la libertad del individuo y una intervención mínima del Estado en la vida social y económica. </string>
    <string name="propone">El Liberalismo propone:</string>
    <string name="librecomercio">-Libre comercio \n -Inflación controlada \n-Protección de derechos de propiedad \n-Tamaño del Estado razonable \n-Impuestos razonables \n-Regulaciones coherentes para fomentar el emprendimiento y por consiguiente crear empleos</string>
</resources>